# CaroTTS

./: .gitignore  README.md  dvc.yaml  inference_comparison.py  main.py  params.yaml  pyproject.toml
.github/workflows/: code-quality-checks.yml
data/caromopfen/: .gitignore
data/caromopfen/mel_manifests/: .gitignore
src/: download_pretrained.py  dvc.yaml  export.py  export_onnx.py  export_static_onnx.py  export_torch_inductor.py  generate_mels.py  infer_onnx.py  infer_tts.py  params.yaml  prepare_hui_data.py  tokenizer.py  train_fastpitch.py  train_hifigan.py
src/configs/: train_config_fastpitch.yaml  train_config_hifigan.yaml
src/models/: fastspeech.py
trained_pipelines/caro/: .gitignore
